resources/testcases_static_checks/tests/positive/isFrontierOne/e28.rls
../../../tests_common_data/rule-classification-examples/e28.rls