resources/testcases_static_checks/tests/negative/isWeaklyAcyclic/joint-acyclicity-guarded-talk-acyclicity.rls
../../../tests_common_data/rule-classification-examples/joint-acyclicity-guarded-talk-acyclicity.rls